fix: Change binary name to geocodio (from geocodio-cli)

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,8 @@
-project_name: geocodio-cli
+project_name: geocodio
 before:
   hooks:
     - go mod tidy
+    - go test -cover -race ./...
 builds:
   - env:
       - CGO_ENABLED=0
