--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,9 +1,15 @@
+# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+version: 2
+
 project_name: geocodio
+
 before:
   hooks:
     - go mod tidy
+
 builds:
-  - env:
+  - binary: '{{ .ProjectName }}'
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
@@ -11,17 +17,30 @@ builds:
       - darwin
     ldflags:
       - -s -w -X github.com/geocodio/geocodio-cli/release.version={{.Version}} -X github.com/geocodio/geocodio-cli/release.commit={{.Commit}} -X github.com/geocodio/geocodio-cli/release.date={{.Date}}
+
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - id: default
+    format: tar.gz
+    # use zip for windows archives
+    format_overrides:
+      - goos: windows
+        format: zip
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- .Version }}_
+      {{- .Os }}_
+      {{- .Arch }}
+    builds_info:
+      group: root
+      owner: root
+
 checksum:
   name_template: 'checksums.txt'
+  algorithm: sha256
+
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
